# splice-shell

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-please.yml  release.yml
apps/desktop/: eslint.config.js  index.html  package.json
apps/desktop/src/: main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  linux.json  windows.json
apps/desktop/src-tauri/permissions/: terminal.toml
apps/desktop/src-tauri/permissions/autogenerated/: active_paste_target.toml  app_status.toml  clipboard_read_text.toml  clipboard_write_text.toml  close_paste_session.toml  open_path.toml  preview_active_clipboard_image_paste.toml  preview_clipboard_image_paste.toml  pty_ack.toml  pty_interrupt.toml  pty_kill.toml  pty_resize.toml  pty_spawn.toml  pty_write.toml  workspace_close.toml  workspace_create.toml  workspace_list.toml  workspace_protocol_activate.toml  workspace_protocol_negotiate.toml  workspace_recover.toml  workspace_restart.toml  workspace_select.toml  workspace_update.toml
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/platform/: linux.rs  mod.rs  windows.rs  wsl.rs
apps/desktop/src-tauri/tests/: authority_manifest.rs  platform_authority.rs
apps/desktop/src/paste/: activePasteTarget.test.ts  activePasteTarget.ts  debouncedRefresh.test.ts  debouncedRefresh.ts  pastePreview.test.ts  pastePreview.ts
apps/desktop/src/terminal/: clipboardClient.ts  fileLinks.test.ts  fileLinks.ts  inputActivity.test.ts  inputActivity.ts  keyboardShortcuts.test.ts  keyboardShortcuts.ts  ptyClient.test.ts  ptyClient.ts  ptyRecovery.test.ts  ptyRecovery.ts  terminalBridge.test.ts  terminalBridge.ts  terminalOutputFilter.fuzz.test.ts  terminalOutputFilter.test.ts  terminalOutputFilter.ts  terminalOutputScheduler.test.ts  terminalOutputScheduler.ts
apps/desktop/src/ui/: App.test.tsx  App.tsx  TabStrip.test.tsx  TabStrip.tsx  TerminalSettingsPanel.tsx  TerminalView.test.tsx  TerminalView.tsx  TitleBar.test.tsx  TitleBar.tsx  WorkspaceSwitcher.test.tsx  WorkspaceSwitcher.tsx  terminalSettings.ts  usePtySession.ts  useSessions.test.ts  useSessions.ts  workspaceClient.test.ts  workspaceClient.ts
apps/desktop/src/window/: windowChrome.test.ts  windowChrome.ts
crates/splice-clipboard/: Cargo.toml
crates/splice-clipboard/src/: lib.rs
crates/splice-compat/: Cargo.toml
crates/splice-compat/src/: lib.rs
crates/splice-compat/tests/: matrix.rs
crates/splice-core/: Cargo.toml
crates/splice-core/src/: lib.rs  workspace.rs  workspace_lifecycle.rs
crates/splice-core/tests/: workspace_lifecycle.rs  workspace_store.rs
crates/splice-pty/: Cargo.toml
crates/splice-pty/examples/: capture_ai_cli.rs
crates/splice-pty/src/: flow.rs  lib.rs
crates/splice-pty/tests/: ai_cli_smoke.rs  conpty_smoke.rs  platform_runtime_matrix.rs  session_contract.rs  unix_pty.rs  wsl_runtime_receipt.rs  wsl_runtime_support.rs
docs/: architecture.md  development.md  mvp.md  releases.md  resource-safety.md  vision.md
sdd/memory-leaks-freezes/: verify-report
sdd/release-updater-setup/: apply-progress.md
