[package]
name = "splice-clipboard"
version = "0.1.0"
description = "Clipboard image pipeline boundary for Splice Shell"
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
splice-core = { path = "../splice-core" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Ole"
] }
