[package]
name = "splice-clipboard"
version = "0.1.0"
description = "Clipboard image pipeline boundary for Splice Shell"
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
splice-core = { path = "../splice-core" }
# Plain (non-windows-gated) dependency so the DIB->PNG conversion compiles and
# unit-tests on every CI OS. Only bmp+png codecs to keep the build lightweight.
image = { version = "0.25", default-features = false, features = ["bmp", "png"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Ole"
] }
