[package]
name = "splice-pty"
version = "0.1.0"
description = "Terminal process hosting boundary for Splice Shell"
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_System_IO",
  "Win32_System_Pipes",
  "Win32_System_Threading"
] }
