[package]
name = "splice-pty"
version = "0.1.0"
description = "Terminal process hosting boundary for Splice Shell"
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
# Logging facade only (no backend): the host application registers the backend
# (tauri-plugin-log). Used to surface the console-interrupt-signal failure that
# previously went to a stderr the windowed release build does not have.
log = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_System_IO",
  "Win32_System_JobObjects",
  "Win32_System_Pipes",
  "Win32_System_Threading"
] }

[target.'cfg(windows)'.dev-dependencies]
# Test-only: the handle-leak regression test in tests/conpty_smoke.rs reads
# the current process's OS handle count via GetProcessHandleCount to prove
# PtySession::spawn/close cycles don't leak handles. Kept as a dev-dependency
# (not a normal dependency) because nothing in the library itself needs it.
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_System_Threading"
] }
