[package]
name = "splice-shell-desktop"
version = "0.2.0"
description = "Splice Shell desktop application"
authors = ["Splice Shell contributors"]
license.workspace = true
repository.workspace = true
edition.workspace = true
default-run = "splice-shell-desktop"

[lib]
name = "splice_shell_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "splice-shell-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
time.workspace = true
splice-core = { path = "../../../crates/splice-core" }
splice-pty = { path = "../../../crates/splice-pty" }
splice-clipboard = { path = "../../../crates/splice-clipboard" }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
log = "0.4"
